Bug 1188796 - Have MTP record modified timestamps when they're passed. r=alchen

Of the 3 popular host platforms, only Windows properly passes in the
modification timestamp of the file.

Under linux, it passes in an empty string, which then gets passed
to beginSendObject as zero. This patch now treats that as the current
date/time.

Under OSX, the Android FIle Transfer program passes in the date modified
and date created, but sets both of these fields to be the current
date/time and not the times from the files being copied.


Hl: Enter commit message.  Lines beginning with 'HG:' are removed.